# task-trigger-mcp

./: .gitignore  AUTOUPDATE.md  COMPLETED.md  Cargo.toml  LICENSE  MVP_STATUS.md  README.md  TEST_REPORT.md  USAGE.md  agents.md  install.sh  mcp-config.md  prompt.txt  ragignore  skills-lock.json  task-trigger-mcp-spec.md
.github/workflows/: auto-release.yml  ci.yml  release.yml
scripts/: install.ps1  install.sh
src/: error.rs  main.rs  mcp_wizard.rs  service_install.rs  setup.rs  skills.rs  sync_manager.rs
src/application/: mod.rs  notification_service.rs  ports.rs  tests.rs
src/autoupdate/: mod.rs  tests.rs
src/config/: mod.rs  skills.rs  tests.rs
src/daemon/: cli.rs  doctor.rs  handler.rs  helpers.rs  mod.rs  params.rs  process.rs  server.rs  tests.rs
src/db/: agent.rs  group.rs  mod.rs  project.rs  run.rs  session.rs  state.rs  sync.rs  tests.rs
src/domain/: canopy_config.rs  cli_config.rs  cli_strategy.rs  domain_tests.rs  mod.rs  models.rs  models_db.rs  models_tests.rs  notification.rs  project.rs  sync.rs  usage_stats.rs  validation.rs  validation_tests.rs
src/executor/: mod.rs  tests.rs
src/mcp_wizard_module/: mod.rs
src/rag/: chunker.rs  ingestion.rs  mod.rs  ragignore.rs  rate_limiter.rs
src/scheduler/: cron_scheduler.rs  cron_scheduler_tests.rs  mod.rs  tests.rs
src/setup_module/: config_manip.rs  daemon_service.rs  mod.rs  models.rs  platform_adapter.rs  public_api.rs  registry_fetch.rs  sync_and_skills.rs  wizard.rs
src/shared/: banner.rs  mod.rs
src/skills_module/: mod.rs
src/state/: mod.rs
src/system/: gpu.rs  mod.rs  platform.rs  windows.rs
src/tools/: mod.rs
src/tui/: agent.rs  app.rs  banner_glitch.rs  brians_brain.rs  context_transfer.rs  event.rs  mod.rs  prompt_templates.rs  terminal_history.rs  ui.rs  whimsg.rs
src/tui/agent/: input.rs  mod.rs  naming.rs  pty.rs  sanitize.rs  screen.rs
src/tui/app/: agents.rs  data.rs  dialog.rs  mod.rs  session_resume.rs  sync.rs  terminal_search.rs  types.rs  utils.rs
src/tui/app/dialog/: app_methods.rs  at_picker.rs  new_agent.rs  prompt.rs
src/tui/event/: agent_focus.rs  context_transfer.rs  home_preview.rs  mod.rs  new_agent_dialog.rs  paste.rs  prompt_template.rs  rag_transfer.rs  search_picker.rs  terminal_warp.rs
src/tui/ui/: dialogs.rs  footer.rs  header.rs  mod.rs  panel.rs  sidebar.rs  system_dashboard.rs
src/tui/ui/dialogs/: at_picker.rs  context_transfer.rs  mod.rs  new_agent_dialog.rs  pickers.rs  prompt_builder.rs  rag_transfer.rs  section_picker.rs  simple_modals.rs  simple_prompt.rs
src/tui/ui/panel/: details.rs  home.rs  log_fallback.rs  mod.rs  sync.rs  vt100.rs  warp.rs
src/tui/whimsg/: kaomojis.rs  mod.rs  rng.rs
src/watchers/: mod.rs
