[package]
name = "harness-canopy"
version = "2.0.0"
edition = "2021"
rust-version = "1.75"
description = "A self-contained MCP server for AI agent task scheduling and file watching"
license = "MIT"
repository = "https://github.com/UniverLab/harness-canopy"
homepage = "https://github.com/UniverLab/harness-canopy"
keywords = ["mcp", "scheduler", "cron", "file-watcher", "ai-agent"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[[bin]]
name = "canopy"
path = "src/main.rs"

[dependencies]
# MCP SDK
rmcp = { version = "1.3", features = ["server", "transport-io", "transport-streamable-http-server"] }

# Axum for Streamable HTTP transport
axum = "0.8"

# Async runtime
tokio = { version = "1.50", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Schema generation for MCP tools
schemars = { version = "0.9", features = ["derive"] }

# SQLite persistence
rusqlite = { version = "0.39", features = ["bundled"] }

# File watching
notify = "8.2"

# Cron expression parsing (internal scheduler)
cron = "0.16"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# CLI binary discovery
which = "8.0"

# CLI argument parsing
clap = { version = "4.6", features = ["derive"] }

# Home directory resolution
dirs = "6.0"

# UUID generation for execution runs
uuid = { version = "1", features = ["v4"] }

# SHA-256 for workdir_hash
sha2 = "0.10"

# Directory traversal for RAG ingestion
walkdir = "2"

# Graceful shutdown coordination
tokio-util = { version = "0.7", features = ["rt"] }

# TUI
ratatui = "0.30"

# PTY for interactive agents
portable-pty = "0.9"

# Virtual terminal emulator for embedding agent output
vt100 = "0.16"

# HTTP client for registry fetch
reqwest = { version = "0.13", features = ["blocking", "json"] }

# Interactive prompts for setup wizard
inquire = "0.9"

# Shell argument parsing
shell-words = "1.1"

# Random number generation for automata noise injection
rand = "0.10"

# Clipboard for text copy from TUI
arboard = "3.6"
toml = "1.1.2"

# Path manipulation for relative paths
pathdiff = "0.2"

# Auto-update dependencies
flate2 = "1.0"
tar = "0.4"
tempfile = "3.8"
sysinfo = "0.38"

# Unix process management (kill, setsid)
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"

[features]
default = []

[lints.clippy]
# Production quality lints
needless_pass_by_value = "warn"
redundant_closure = "warn"
redundant_clone = "warn"
large_enum_variant = "warn"
manual_let_else = "warn"
semicolon_if_nothing_returned = "warn"
inconsistent_struct_constructor = "warn"
doc_markdown = "warn"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
